--- a/PTi1MenaxhimiDepos/Items/RegisterItem.en.resx
+++ b/PTi1MenaxhimiDepos/Items/RegisterItem.en.resx
@@ -160,8 +160,14 @@
   <data name="radLabel1.Location" type="System.Drawing.Point, System.Drawing">
     <value>505, 107</value>
   </data>
+  <data name="radLabel1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>79, 30</value>
+  </data>
+  <data name="radLabel1.Text" xml:space="preserve">
+    <value>Barcode</value>
+  </data>
   <data name="radLabel9.Location" type="System.Drawing.Point, System.Drawing">
-    <value>138, 534</value>
+    <value>872, 535</value>
   </data>
   <data name="radLabel9.Size" type="System.Drawing.Size, System.Drawing">
     <value>107, 30</value>
@@ -170,7 +176,7 @@
     <value>Description</value>
   </data>
   <data name="radLabel8.Location" type="System.Drawing.Point, System.Drawing">
-    <value>869, 394</value>
+    <value>505, 535</value>
   </data>
   <data name="radLabel8.Size" type="System.Drawing.Size, System.Drawing">
     <value>136, 30</value>
@@ -179,10 +185,13 @@
     <value>Stock Quantity</value>
   </data>
   <data name="txtDescription.Location" type="System.Drawing.Point, System.Drawing">
-    <value>138, 578</value>
+    <value>872, 579</value>
+  </data>
+  <data name="txtDescription.Size" type="System.Drawing.Size, System.Drawing">
+    <value>258, 37</value>
   </data>
   <data name="txtstock.Location" type="System.Drawing.Point, System.Drawing">
-    <value>869, 438</value>
+    <value>505, 579</value>
   </data>
   <data name="radLabel6.Location" type="System.Drawing.Point, System.Drawing">
     <value>138, 401</value>
@@ -194,7 +203,7 @@
     <value>Supplier</value>
   </data>
   <data name="radLabel7.Location" type="System.Drawing.Point, System.Drawing">
-    <value>505, 401</value>
+    <value>138, 543</value>
   </data>
   <data name="radLabel7.Size" type="System.Drawing.Size, System.Drawing">
     <value>61, 30</value>
@@ -215,7 +224,7 @@
     <value>505, 151</value>
   </data>
   <data name="cmbActive.Location" type="System.Drawing.Point, System.Drawing">
-    <value>505, 437</value>
+    <value>138, 579</value>
   </data>
   <data name="radDropDownList5.Location" type="System.Drawing.Point, System.Drawing">
     <value>138, 437</value>
@@ -235,42 +244,57 @@
   <data name="radLabel11.Text" xml:space="preserve">
     <value>ID</value>
   </data>
-  <data name="btnUpdate.Location" type="System.Drawing.Point, System.Drawing">
-    <value>993, 621</value>
+  <data name="radLabel12.Location" type="System.Drawing.Point, System.Drawing">
+    <value>872, 401</value>
   </data>
-  <data name="btnUpdate.Text" xml:space="preserve">
-    <value>Update</value>
+  <data name="txtsaleprice.Location" type="System.Drawing.Point, System.Drawing">
+    <value>869, 437</value>
   </data>
-  <data name="btnSave.Location" type="System.Drawing.Point, System.Drawing">
-    <value>993, 621</value>
+  <data name="radLabel13.Location" type="System.Drawing.Point, System.Drawing">
+    <value>505, 401</value>
+  </data>
+  <data name="txtpurchaseprice.Location" type="System.Drawing.Point, System.Drawing">
+    <value>505, 437</value>
+  </data>
+  <data name="btnDisplayUnits.Location" type="System.Drawing.Point, System.Drawing">
+    <value>405, 292</value>
   </data>
   <data name="btnDelete.Location" type="System.Drawing.Point, System.Drawing">
-    <value>993, 560</value>
+    <value>993, 670</value>
   </data>
   <data name="btnDelete.Text" xml:space="preserve">
     <value>Delete</value>
   </data>
   <data name="btnClear.Location" type="System.Drawing.Point, System.Drawing">
-    <value>850, 621</value>
+    <value>850, 731</value>
   </data>
   <data name="btnClear.Text" xml:space="preserve">
     <value>Clear</value>
   </data>
-  <data name="radLabel10.Location" type="System.Drawing.Point, System.Drawing">
-    <value>566, 12</value>
+  <data name="btnUpdate.Location" type="System.Drawing.Point, System.Drawing">
+    <value>993, 731</value>
   </data>
-  <data name="radLabel10.Size" type="System.Drawing.Size, System.Drawing">
-    <value>101, 30</value>
+  <data name="btnUpdate.Text" xml:space="preserve">
+    <value>Update</value>
   </data>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="radLabel10.TabIndex" type="System.Int32, mscorlib">
-    <value>29</value>
+  <data name="btnSave.Location" type="System.Drawing.Point, System.Drawing">
+    <value>993, 731</value>
   </data>
-  <data name="radLabel10.Text" xml:space="preserve">
-    <value>Insert Item</value>
+  <data name="btnDisplaySupplier.Location" type="System.Drawing.Point, System.Drawing">
+    <value>405, 437</value>
+  </data>
+  <data name="btnDisplayCategories.Location" type="System.Drawing.Point, System.Drawing">
+    <value>772, 292</value>
+  </data>
+  <data name="btnDisplayTypes.Location" type="System.Drawing.Point, System.Drawing">
+    <value>1136, 292</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>1291, 776</value>
+    <value>1291, 835</value>
+  </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Item</value>
